--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
 
         function updateTable() {
             const filteredData = filterData(jsonData);
-            //table.setData(filteredData);
+            table.setData(filteredData);
         }
 
         // Initialize Tabulator
