--- a/index.html
+++ b/index.html
@@ -187,7 +187,9 @@
     try {
         console.log("Starting XML transformation process...");
 
-        const xml = await fetchAndParseFile('data.xml', 'XML');
+        const url = 'https://qhod.net/o:qhod.standOff/TEI_SOURCE';
+        const xml = await fetchAndParseFile(url, 'XML');
+        //const xml = await fetchAndParseFile('data.xml', 'XML');
         const xsl = await fetchAndParseFile('styles.xsl', 'XSL');
 
         console.log("Starting XSLT transformation...");
