--- a/index.html
+++ b/index.html
@@ -188,9 +188,9 @@
         
         console.log("Starting XML transformation process...");
 
-        const url = 'https://thingproxy.freeboard.io/fetch/https://qhod.net/o:qhod.standOff/TEI_SOURCE';
-        const xml = await fetchAndParseFile(url, 'XML');
-        //const xml = await fetchAndParseFile('data.xml', 'XML');
+        //const url = 'https://thingproxy.freeboard.io/fetch/https://qhod.net/o:qhod.standOff/TEI_SOURCE';
+        //const xml = await fetchAndParseFile(url, 'XML');
+        const xml = await fetchAndParseFile('data.xml', 'XML');
         const xsl = await fetchAndParseFile('styles.xsl', 'XSL');
 
         console.log("Starting XSLT transformation...");
