--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         });
     </script>
     <style>
-        body {
+               body {
             font-family: Arial, sans-serif;
             margin: 20px;
             max-width: 1200px;
@@ -45,21 +45,21 @@
             overflow: auto;
         }
         #filters {
-            margin-bottom: 20px;
+            margin-bottom: 10px;
             display: flex;
             gap: 10px;
             flex-wrap: wrap;
         }
         #searchBar {
-            width: 300px;
+            width: 200px;
             padding: 10px;
             font-size: 16px;
             border: 1px solid #ddd;
         }
         #entityTable {
+            margin-top: 10px;
             width: 100%;
             display: none;
-           
         }
         label {
             font-weight: bold;
@@ -72,8 +72,6 @@
         .tabulator .tabulator-header .tabulator-col {
         background: #b3e1d9
         }
-
-
 
     </style>
 </head>
